# smartscore-info-client

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
smartscore-info-client/schemas/: team_info.py
smartscore_info_client/: utility.py
smartscore_info_client/schemas/: db_player_info.py  player_info.py  team_info.py
tests/unit/: conftest.py  test_db_player_schema.py  test_player_schema.py  test_team_schema.py
